fix in horizontal card on mobile

--- a/src/pages/MatchPint/matchPint.less
+++ b/src/pages/MatchPint/matchPint.less
@@ -44,6 +44,9 @@
 						border-right: 80px solid transparent;
 						width: 0;
 					}
+					.img-mobile {
+						display: none;
+					}
 				}
 			}
 			//MOBILE
@@ -59,6 +62,9 @@
 					}
 				}
 				.image-container {
+					.img-desktop{
+						display: none;
+					}
 					img {
 						height: 280px;
 					}
@@ -68,105 +74,140 @@
 	}
 	.description-container {
 		padding-bottom: 60px;
+		padding-left: 4%;
+		padding-right: 4%;
 		@media (min-width: 768px) {
 			padding-left: 20%;
 			padding-right: 20%;
 		}
 		.description {
-			font-size: 20px;
-			line-height: 32px;
+			font-size: 16px;
+			line-height: 26px;
+			@media (min-width: 768px) {
+				font-size: 20px;
+				line-height: 32px;
+			}
 		}
 	}
 	.subtitle-container {
 		padding-bottom: 60px;
+		padding-left: 4%;
+		padding-right: 4%;
 		@media (min-width: 768px) {
 			&.center {
 				padding-left: 20%;
 				padding-right: 20%;
 			}
-		}
-		&.left {
-			padding-left: 10%;
+			&.left {
+				padding-left: 10%;
+			}
 		}
 		.subtitle {
-			font-size: 28px;
-			line-height: 40px;
+			font-size: 20px;
+			line-height: 34px;
 			font-weight: bold;
+			@media (min-width: 768px) {
+				font-size: 28px;
+				line-height: 40px;
+			}
 		}
 	}
 	.horizontal-cards-container {
 		padding-bottom: 35px;
-		display: none; // TODO: change for mobile
 		@media (min-width: 768px) {
 			display: flex;
+			margin-right: -1rem;
+			margin-left: -1rem;
+			flex-wrap: wrap;
+    		align-items: flex-start;
 		}
-		// HORIZONTAL LEFT IMAGE CARD
-		.card-left-image-container{
-			display: flex;
-			height: 250px;
+		// HORIZONTAL CARD
+		.card-container {
 			margin-bottom: 25px;
 			.image-container {
-				width: 45%;
-				border-right: 5px solid #f2af0c;
 				img {
 					height: 100%;
 					width: 100%;
 				}
 			}
 			.content-container {
-				width: 54%;
-				padding-bottom: 30px;
-				padding-left: 50px;
-				padding-top: 44px;
-				padding-right: 30px;
 				background-color: #ffffff;
 				.icon {
 					height: 35px;
-					width: 35px;
 				}
 				.content-title {
 					font-size: 20px;
 					line-height: 32px;
 					font-weight: bold;
+					margin: unset;
 				}
 				.content-text {
 					font-size: 16px;
 					line-height: 26px;
+					margin: unset;
 				}
 			}
-		}
-		// HORIZONTAL RIGHT IMAGE CARD
-		.card-right-image-container {
-			display: flex;
-			height: 250px;
-			margin-bottom: 25px;
-			.image-container {
-				width: 45%;
-				border-left: 5px solid #f2af0c;
-				img {
-					height: 100%;
+			//DESKTOP
+			@media (min-width: 768px) {
+				height: 250px;
+				display: flex;
+				padding-right: 1rem;
+				padding-left: 1rem;
+				width: 50%;
+				flex: 1 1 auto;
+				.image-container {
+					width: 45%;
+				}
+				.content-container {
+					width: 54%;
+					padding-top: 44px;
+					padding-right: 30px;
+					padding-bottom: 30px;
+					padding-left: 50px;
+				}
+				&.left {
+					.image-container {
+						order: 0;
+						border-right: 5px solid #f2af0c;
+					}
+					.content-container {
+						order: 1;
+					}
+				}
+				&.right {
+					.image-container {
+						order: 1;
+						border-left: 5px solid #f2af0c;
+					}
+					.content-container {
+						order: 0;
+					}
+				}
+			}
+			//MOBILE
+			@media (max-width: 768px) {
+				height: 490px;
+				.image-container {
+					height: 260px;
 					width: 100%;
+					border-bottom: 5px solid #f2af0c;
 				}
-			}
-			.content-container {
-				width: 54%;
-				padding-bottom: 30px;
-				padding-left: 50px;
-				padding-top: 44px;
-				padding-right: 30px;
-				background-color: #ffffff;
-				.icon {
-					height: 35px;
-					width: 35px;
-				}
-				.content-title {
-					font-size: 20px;
-					line-height: 32px;
-					font-weight: bold;
-				}
-				.content-text {
-					font-size: 16px;
-					line-height: 26px;
+				.content-container {
+					width: 100%;
+					padding-top: 40px;
+					padding-bottom: 30px;
+					.icon {
+						padding-right: 30px;
+						padding-left: 30px;
+					}
+					.content-title {
+						padding-right: 30px;
+						padding-left: 30px;
+					}
+					.content-text {
+						padding-right: 30px;
+						padding-left: 30px;
+					}
 				}
 			}
 		}
@@ -321,6 +362,11 @@
 				padding-left: 1rem;
 				width: 33.3333%; 
 				flex: 1 1 auto;
+			}
+			@media (max-width: 768px) {
+				padding-left: 4%;
+				padding-right: 4%;
+				margin-bottom: 4%;
 			}
 		}
 		.card-related-content .image-container {
